# ansible-mcp

./: .gitignore  .pre-commit-config.yaml  PYPI_TRUSTED_PUBLISHER_SETUP.md  README.md  SKILL.md  ansible-mcp-architecture.jsx  ansible-mcp-architecture.md  debug_ci_error.py  debug_lint.py  debug_lint_detailed.py  phase-execution-plan.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  publish.yml
docs/: CONTRIBUTING.md  MARKETPLACE_COMPATIBILITY.md  RELEASE.md
src/ansible_mcp/: __init__.py  __main__.py  context.py  installer.py  router.py  server.py  token_budget.py  upstream.py  upstream_tools.py
src/ansible_mcp/plugins/: __init__.py  inventory.py  lint.py  playbook.py
src/ansible_mcp/resources/: __init__.py
src/ansible_mcp/resources/docs/: best_practices.md  environment.md  execution_environment.md  execution_environment_rules.md  execution_environment_sample.yml  execution_environment_schema.json  inventory.md  lint.md  navigator.md  playbook.md  project_generators.md  upstream_parity.md
tests/: e2e_test.py
tests/fixtures/: bad_playbook.yml  broken_syntax.yml  inventory.ini  sample_playbook.yml
tests/integration/: test_real_tools.py
tests/unit/: test_context.py  test_installer.py  test_plugin_inventory.py  test_plugin_lint.py  test_plugin_playbook.py  test_plugins_base.py  test_router.py  test_server.py  test_token_budget.py  test_upstream.py  test_upstream_tools.py
